--- a/ui/mainWindow.ui
+++ b/ui/mainWindow.ui
@@ -94,8 +94,17 @@
      <string>File</string>
     </property>
     <addaction name="actionFolder"/>
+    <addaction name="separator"/>
+    <addaction name="actionExit"/>
+   </widget>
+   <widget class="QMenu" name="menuOptions">
+    <property name="title">
+     <string>Options</string>
+    </property>
+    <addaction name="actionWarnings"/>
    </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuOptions"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="toolBar">
@@ -118,6 +127,7 @@
     <bool>false</bool>
    </attribute>
    <addaction name="actionFolder"/>
+   <addaction name="actionWarnings"/>
   </widget>
   <action name="actionFolder">
    <property name="icon">
@@ -135,6 +145,29 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+S</string>
+   </property>
+  </action>
+  <action name="actionExit">
+   <property name="text">
+    <string>Exit</string>
+   </property>
+  </action>
+  <action name="actionWarnings">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="icons.qrc">
+     <normaloff>:/error_list.png</normaloff>:/error_list.png</iconset>
+   </property>
+   <property name="text">
+    <string>Disable Warnings</string>
+   </property>
+   <property name="toolTip">
+    <string>Disable Warning Popup</string>
+   </property>
+   <property name="statusTip">
+    <string>Disable Warning Popup</string>
    </property>
   </action>
  </widget>
