--- a/ui/icons.qrc
+++ b/ui/icons.qrc
@@ -3,5 +3,6 @@
     <file>folder.png</file>
     <file>error_list.png</file>
     <file>hlsearch.png</file>
+    <file>user_info.png</file>
   </qresource>
 </RCC>
