--- a/ui/mainWindow.ui
+++ b/ui/mainWindow.ui
@@ -67,6 +67,11 @@
       </attribute>
       <column>
        <property name="text">
+        <string>Filename</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
         <string>Source</string>
        </property>
       </column>
